<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="lantern.soconcepts.com.lantern.SignInActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/signinLayout"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/imageViewLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/lantern_transparentbg" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/email_text"
                        style="@style/textfield_style"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/password_text"
                        style="@style/textfield_style"
                        android:hint="@string/password" />

                    <Button
                        android:id="@+id/forgotPasswordBtn"
                        style="@style/link_button"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:textSize="17sp"
                        android:text="@string/forgot_password" />

                    <Button
                        android:id="@+id/signInBtn"
                        style="@style/button_style"
                        android:layout_below="@id/introText"
                        android:text="@string/signin_caps" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signinLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/lightgray"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="0.6"
                android:gravity="right"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/signupBtn"
                style="@style/link_button"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:gravity="left|center_vertical"
                android:text="@string/signup" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
