<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:id="@+id/activity_layout"
    tools:context="lantern.soconcepts.com.lantern.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/signinLayout"
                android:gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/imageViewLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lantern" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lanterntext" />
                </LinearLayout>

                <TextView
                    android:id="@+id/introText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageViewLayout"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="20dp"
                    android:text="Join Lantern to get sermons, songs and ebooks. Plus connect and follow mentors/motivational speakers for regular insights to various topics"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/joinBtn"
                    style="@style/button_style"
                    android:layout_below="@id/introText"
                    android:text="@string/join" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="0.6"
                    android:gravity="right"
                    android:text="@string/already_a_member" />

                <Button
                    android:id="@+id/signinBtn"
                    style="@style/link_button"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:gravity="left|center_vertical"
                    android:text="@string/signin" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
